fix(parcours): la demarche choisie determine le niveau vise, partout
user@sejourfr.fr portait target_procedure=NAT et target_level=B1. La
naturalisation exige B2 depuis le 1er janvier 2026 : le candidat etait
donc felicite d'avoir atteint son objectif alors que sa demarche en
demandait un de plus, et la version au niveau vise ne lui etait plus
proposee (« deja atteint »).

Cause : users.target_level n'etait ecrit par AUCUNE surface applicative.
Le seed posait CR/B1, puis le changement de demarche via /parcours
n'ecrivait que la procedure — le niveau restait fige sur l'ancienne.

- la table CSP->A2 / CR->B1 / NAT->B2 vit desormais dans l'enum
  TargetProcedure (donnee legale de 3 lignes, meme parti pris que
  SkillTaskCode), avec niveauVise(procedure, declare) qui applique le
  PLANCHER sur l'ordre CECRL : NAT+B1 => B2, CSP+B2 => B2 (une visee
  volontairement plus haute est respectee), procedure absente => le
  declare seul ;
- 6 copies de cette table supprimees (MeService.targetToCecrl, mobile
  tcfLevel, web /parcours, /inscription, /profil). Les fronts en gardent
  un miroir GELE PAR TEST — le mapping doit s'afficher pendant qu'on
  CHOISIT, donc avant tout aller-retour serveur, y compris sur
  /inscription ou aucun compte n'existe encore ;
- MeService.updateTargetProcedure (seul point d'ecriture) pose les deux
  champs, et AuthenticatedUser.targetLevel est RE-DERIVE a la lecture :
  aucun front ne peut recevoir un couple contradictoire, meme sur une
  ligne heritee non migree.

Corollaire cote restitution : quand le niveau vise est reellement
atteint, la section « la marche au-dessus » disparaissait en silence —
et depuis le retrait de version_amelioree, le candidat n'avait plus
aucun texte modele sans comprendre pourquoi. Un champ serveur
niveau_vise_atteint, exclusif de version_ciblee, le dit explicitement.
C'est un champ serveur et non une deduction front pour une raison dure :
vu du front, « objectif atteint » et « le 2e appel LLM a echoue » sont
la meme abs