@@ -1,127 +1,132 @@
 package com.sejourfr.app.service;
 
-import com.sejourfr.app.dto.TcfLevelProfileResponse;
-import com.sejourfr.app.dto.TcfLevelProfileResponse.EpreuveLevel;
+import com.sejourfr.app.dto.TcfLevelProfile;
 import com.sejourfr.app.entity.AiEvaluation;
 import com.sejourfr.app.entity.Attempt;
-import com.sejourfr.app.entity.ProductionSubmission;
-import com.sejourfr.app.enums.AttemptType;
 import com.sejourfr.app.enums.EpreuveType;
-import com.sejourfr.app.enums.Module;
 import com.sejourfr.app.enums.NiveauCecrl;
-import com.sejourfr.app.enums.QuestionType;
-import com.sejourfr.app.enums.SubmissionStatut;
 import com.sejourfr.app.manager.AiEvaluationManager;
 import com.sejourfr.app.manager.AttemptManager;
-import com.sejourfr.app.manager.ProductionSubmissionManager;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.math.BigDecimal;
-import java.math.RoundingMode;
 import java.time.Instant;
-import java.util.ArrayList;
-import java.util.List;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.UUID;
 
 /**
- * Profil de niveau TCF par épreuve : agrège le DERNIER passage de chaque
- * épreuve indépendamment (dernier examen CO, dernier CE, dernière session EE,
- * dernière EO) et en déduit le niveau global = plancher.
+ * Niveau TCF d'un candidat <b>dans le temps</b> (à ne pas confondre avec le
+ * résultat d'un examen donné) : <b>plancher des 4 épreuves, chaque épreuve
+ * retenant son MEILLEUR résultat, une épreuve abandonnée sans rien rendre étant
+ * EXCLUE du calcul</b>.
  *
- * <p>Toute la math CECRL (estimation, plancher, plafond B2) est déléguée à
- * {@link TcfLevelEstimatorService} — ce service ne fait que sélectionner les
- * bons attempts et lire les niveaux déjà calculés.
+ * <h2>« Abandonnée sans rien rendre »</h2>
+ * <ul>
+ *   <li><b>CO / CE</b> : examen blanc fini sans <b>aucune réponse</b>
+ *       enregistrée. Le filtre vit dans la requête
+ *       {@code AttemptRepository.findQcmEpreuvesPassees} ({@code EXISTS} sur
+ *       {@code answers}) : un tel attempt n'est jamais chargé ici.</li>
+ *   <li><b>EE / EO</b> : épreuve sans <b>aucune soumission évaluée</b>. Aucune
+ *       {@code AiEvaluation} ⇒ aucun niveau ⇒ épreuve à null.</li>
+ * </ul>
+ *
+ * <p>Principe directeur, déjà celui du dépôt pour le niveau final d'un examen
+ * complet : <b>« aucune preuve » n'est pas « mauvaise preuve »</b> — null =
+ * inconnu, jamais mauvais. Une épreuve qu'on n'a jamais réellement passée ne
+ * doit pas écraser l'indicateur affiché au candidat.
+ *
+ * <p>⚠️ Ceci ne change rien au calcul du résultat d'<b>un</b> examen : là, une
+ * épreuve abandonnée sans verrou reste comptée {@code A1_NON_ATTEINT}
+ * ({@code FullTcfExamResponseBuilder}) — elle a été passée et ratée. Ni au
+ * bilan d'une épreuve de production, qui garde sa moyenne
+ * ({@code ProductionBilanService}).
+ *
+ * <p>Toute la math CECRL (plancher, meilleur, plafond B2, niveau dérivé d'un
+ * score pondéré) est déléguée à {@link TcfLevelEstimatorService} — ce service
+ * ne fait que sélectionner les résultats opposables.
  */
 @Service
 @RequiredArgsConstructor
 public class TcfProfileService {
 
-    /** Nombre d'attempts récents balayés par épreuve pour trouver le dernier exploitable. */
-    private static final int SCAN_LIMIT = 50;
+    /**
+     * Attempts d'examen QCM balayés par épreuve. On cherche le meilleur, donc
+     * on balaie tout l'historique utile ; la requête filtre déjà les épreuves
+     * non passées, ce qui borne le volume réel.
+     */
+    private static final int SCAN_LIMIT = 200;
 
     private final AttemptManager attemptManager;
-    private final ProductionSubmissionManager productionSubmissionManager;
     private final AiEvaluationManager aiEvaluationManager;
     private final TcfLevelEstimatorService levelEstimator;
 
+    /**
+     * Meilleur niveau par épreuve + niveau global (plancher des épreuves
+     * renseignées). Tout à null si le candidat n'a jamais rien rendu en TCF.
+     */
     @Transactional(readOnly = true)
-    public TcfLevelProfileResponse levelProfile(UUID userId) {
-        EpreuveLevel co = latestQcm(userId, QuestionType.CO, EpreuveType.TCF_CO);
-        EpreuveLevel ce = latestQcm(userId, QuestionType.CE, EpreuveType.TCF_CE);
-        EpreuveLevel ee = latestProduction(userId, EpreuveType.TCF_EE);
-        EpreuveLevel eo = latestProduction(userId, EpreuveType.TCF_EO);
+    public TcfLevelProfile levelProfile(UUID userId) {
+        final NiveauCecrl co = bestQcm(userId, EpreuveType.TCF_CO);
+        final NiveauCecrl ce = bestQcm(userId, EpreuveType.TCF_CE);
+        final NiveauCecrl ee = bestProduction(userId, EpreuveType.TCF_EE);
+        final NiveauCecrl eo = bestProduction(userId, EpreuveType.TCF_EO);
 
-        NiveauCecrl global = levelEstimator.floor(
-                List.of(co, ce, ee, eo).stream()
-                        .map(EpreuveLevel::level)
-                        .filter(l -> l != null)
-                        .toList());
-
-        return new TcfLevelProfileResponse(co, ce, ee, eo, global);
+        // Arrays.asList (et non List.of) : une épreuve non passée vaut null, et
+        // c'est précisément ce que le plancher doit ignorer.
+        return new TcfLevelProfile(co, ce, ee, eo,
+                levelEstimator.floor(Arrays.asList(co, ce, ee, eo)));
     }
 
     /**
-     * Dernier examen module fini d'une épreuve QCM (CO/CE), standalone ou
-     * sous-attempt d'un examen complet. Niveau lu sur {@code cecrl_level}
-     * (fallback score pondéré pour les attempts pré-V416).
+     * Meilleur niveau d'une épreuve QCM (CO/CE) : le plus haut
+     * {@code cecrl_level} des examens réellement passés (fallback dérivé du
+     * score pondéré pour les attempts pré-V416). Les examens sans aucune
+     * réponse sont déjà écartés par la requête.
      */
-    private EpreuveLevel latestQcm(UUID userId, QuestionType qType, EpreuveType epreuve) {
-        List<Attempt> attempts = attemptManager.findByUserFiltered(
-                userId, AttemptType.MOCK_EXAM, Module.TCF, qType, null, SCAN_LIMIT);
-        Attempt last = attempts.stream()
-                .filter(a -> a.getFinishedAt() != null)
-                .findFirst()
-                .orElse(null);
-        if (last == null) return EpreuveLevel.empty(epreuve);
-
-        // cecrl_level stocké (plancher posé au finish ; V112 a invalidé les
-        // niveaux de l'ancienne règle), fallback dérivé du score pondéré.
-        NiveauCecrl level = last.getCecrlLevel() != null
-                ? levelEstimator.capB2(last.getCecrlLevel())
-                : levelEstimator.levelFromWeighted(last.getWeightedScore(), last.getMaxWeightedScore());
-        Integer calibrated = last.getMaxWeightedScore() != null
-                ? levelEstimator.calibratedScore(last.getWeightedScore(), last.getMaxWeightedScore())
-                : null;
-        return new EpreuveLevel(
-                epreuve, level, calibrated,
-                last.getWeightedScore(), last.getMaxWeightedScore(),
-                null, last.getFinishedAt());
-    }
-
-    /**
-     * Dernière session de production (EE/EO) exploitable : le plus récent
-     * attempt ayant au moins une submission EVALUATED. Niveau = plancher des
-     * submissions évaluées (plafonné B2) ; {@code note20} = moyenne des notes.
-     */
-    private EpreuveLevel latestProduction(UUID userId, EpreuveType epreuve) {
-        List<Attempt> attempts = attemptManager.findByUserAndEpreuve(userId, epreuve, SCAN_LIMIT);
-        for (Attempt attempt : attempts) {
-            List<ProductionSubmission> subs = productionSubmissionManager.findByAttemptId(attempt.getId());
-            NiveauCecrl floor = null;
-            List<BigDecimal> notes = new ArrayList<>();
-            for (ProductionSubmission s : subs) {
-                if (s.getStatut() != SubmissionStatut.EVALUATED) continue;
-                AiEvaluation eval = aiEvaluationManager.findLatestBySubmissionId(s.getId()).orElse(null);
-                if (eval == null || eval.getNiveauCecrl() == null) continue;
-                floor = levelEstimator.min(floor, eval.getNiveauCecrl());
-                if (eval.getNoteSur20() != null) notes.add(eval.getNoteSur20());
-            }
-            if (floor != null) {
-                Instant when = attempt.getFinishedAt() != null
-                        ? attempt.getFinishedAt() : attempt.getStartedAt();
-                return new EpreuveLevel(
-                        epreuve, levelEstimator.capB2(floor),
-                        null, null, null, average(notes), when);
-            }
+    private NiveauCecrl bestQcm(UUID userId, EpreuveType epreuve) {
+        NiveauCecrl best = null;
+        for (final Attempt a : attemptManager.findQcmEpreuvesPassees(userId, epreuve, SCAN_LIMIT)) {
+            final NiveauCecrl level = a.getCecrlLevel() != null
+                    ? levelEstimator.capB2(a.getCecrlLevel())
+                    : levelEstimator.levelFromWeighted(a.getWeightedScore(), a.getMaxWeightedScore());
+            best = levelEstimator.max(best, level);
         }
-        return EpreuveLevel.empty(epreuve);
+        return best;
     }
 
-    private static BigDecimal average(List<BigDecimal> notes) {
-        if (notes.isEmpty()) return null;
-        BigDecimal sum = notes.stream().reduce(BigDecimal.ZERO, BigDecimal::add);
-        return sum.divide(BigDecimal.valueOf(notes.size()), 1, RoundingMode.HALF_UP);
+    /**
+     * Meilleur niveau d'une épreuve de production (EE/EO) : le plus haut niveau
+     * obtenu sur une tâche évaluée. L'unité retenue est la <b>tâche</b>, parce
+     * que c'est l'unité que le candidat travaille (une session d'entraînement
+     * EE/EO = une tâche).
+     *
+     * <p>Une soumission ré-évaluée porte plusieurs {@code ai_evaluations} :
+     * seule la plus récente fait foi, sinon un verdict périmé pourrait
+     * l'emporter.
+     */
+    private NiveauCecrl bestProduction(UUID userId, EpreuveType epreuve) {
+        final Map<UUID, AiEvaluation> latestBySubmission = new HashMap<>();
+        for (final AiEvaluation e : aiEvaluationManager.findByUserAndEpreuve(userId, epreuve)) {
+            if (e.getNiveauCecrl() == null || e.getSubmission() == null) continue;
+            latestBySubmission.merge(e.getSubmission().getId(), e, TcfProfileService::mostRecent);
+        }
+
+        NiveauCecrl best = null;
+        for (final AiEvaluation e : latestBySubmission.values()) {
+            best = levelEstimator.max(best, levelEstimator.capB2(e.getNiveauCecrl()));
+        }
+        return best;
+    }
+
+    /** Plus récente des deux évaluations ; une date absente ne l'emporte jamais. */
+    private static AiEvaluation mostRecent(AiEvaluation a, AiEvaluation b) {
+        final Instant da = a.getEvaluatedAt();
+        final Instant db = b.getEvaluatedAt();
+        if (db == null) return a;
+        if (da == null) return b;
+        return db.isAfter(da) ? b : a;
     }
 }
